--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "micro-swagger",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index,js"
+    "start": "node index,js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["swagger","aws","lambda"],
+  "author": "Nir Adler",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
