--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "index.js",
   "scripts": {
-    "start": "node index,js"
+    "start": "node ./index.js"
   },
   "keywords": ["swagger","aws","lambda"],
   "author": "Nir Adler",
