--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-swagger",
-  "version": "0.0.9",
+  "version": "0.0.13",
   "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,6 @@
   },
   "scripts": {
     "start": "nodemon --exec babel-node ./index.js",
-    "publish": "mkdir build && npm run build && npm publish && rm -r build",
     "build": "babel src --out-dir build"
   },
   "keywords": [
@@ -26,7 +25,9 @@
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "fs-extra": "^7.0.1",
+    "morgan": "^1.9.1",
+    "xdg-basedir": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
