--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "apigateway-export-tool": "0.0.9",
+    "apigateway-export-tool": "0.0.10",
+    "configstore": "^4.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
