--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "micro-swagger",
-  "version": "0.0.1",
+  "version": "0.0.14",
   "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "index.js",
+  "bin": {
+    "micro-swagger": "micro-swagger.js"
+  },
   "scripts": {
-    "start": "node ./index.js"
+    "start": "nodemon --exec babel-node ./index.js",
+    "build": "babel src --out-dir build"
   },
   "keywords": [
     "swagger",
@@ -14,13 +18,22 @@
   "author": "Nir Adler",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
+    "@babel/polyfill": "^7.4.4",
+    "apigateway-export-tool": "0.0.10",
+    "configstore": "^4.0.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "http-errors": "^1.7.1",
+    "fs-extra": "^7.0.1",
     "morgan": "^1.9.1",
-    "shelljs": "^0.8.3"
+    "xdg-basedir": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.4",
+    "nodemon": "^1.18.11"
   }
 }
