--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-swagger",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "index.js",
   "bin": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "apigateway-export-tool": "0.0.11",
+    "commander": "^2.20.0",
     "configstore": "^4.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
