--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-swagger",
-  "version": "0.1.8",
+  "version": "0.2.0-0",
   "description": "Import swagger files from aws api gateway, and create a swagger ui for them.",
   "main": "build/index.js",
   "bin": {
