--- a/package.json
+++ b/package.json
@@ -20,23 +20,31 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "apigateway-export-tool": "0.0.12",
+    "apigateway-export-tool": "0.0.13",
     "commander": "^2.20.0",
     "configstore": "^4.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "morgan": "^1.9.1",
-    "open": "^6.2.0",
+    "open": "^6.3.0",
     "xdg-basedir": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.4",
-    "nodemon": "^1.18.11"
-  }
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "nodemon": "^1.19.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/niradler/micro-swagger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/niradler/micro-swagger/issues"
+  },
+  "homepage": "https://github.com/niradler/micro-swagger#readme"
 }
